fixed wrapping problem with title

--- a/static/styles.css
+++ b/static/styles.css
@@ -11,11 +11,13 @@ header {
 	left: 0;
 	right: 0;
 	width: 100%;
+	height: 2em
+	overflow: hidden;
 }
 
 section {
 	background-color: #FFFFCC;
-	padding: 3em 0.5em 0.5em;
+	padding: 2.5em 0.5em 0.5em;
 }
 
 footer {
@@ -67,7 +69,7 @@ li.bus {
 }
 
 h1 {
-	font-size: 2em;
+	font-size: 1.6em;
 	font-weight: bold;
 	padding: 0.2em;
 }
